# pairs-scanner

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
pairs_scanner/: __init__.py
tests/: test_pairs.py
