[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pairs-scanner"
version = "0.1.0"
description = "Statistical arbitrage pairs scanner. Engle-Granger cointegration, Hurst exponent, half-life of mean reversion."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Protectyr Labs" },
]
keywords = ["pairs-trading", "cointegration", "statistical-arbitrage", "hurst-exponent", "mean-reversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
full = [
    "statsmodels>=0.13",
]
dev = [
    "pytest>=7.0",
    "statsmodels>=0.13",
]

[project.urls]
Homepage = "https://github.com/protectyr-labs/pairs-scanner"
Repository = "https://github.com/protectyr-labs/pairs-scanner"
Issues = "https://github.com/protectyr-labs/pairs-scanner/issues"

[tool.setuptools.packages.find]
include = ["pairs_scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
